--- a/pages/11515.html
+++ b/pages/11515.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -319,13 +319,13 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a></p>
-
-<p><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>, <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Segal+conjecture">Segal conjecture</a>, <a class="existingWikiWord" href="/nlab/show/Sullivan+conjecture">Sullivan conjecture</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a>, <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></p>
 </li>
 
 <li>
@@ -338,14 +338,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 06:29:56.
+  Last revised on September 10, 2018 at 08:10:47.
   See the <a href="https://ncatlab.org/nlab/history/Gunnar Carlsson" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gunnar+Carlsson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gunnar+Carlsson/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gunnar+Carlsson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gunnar+Carlsson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gunnar+Carlsson" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gunnar+Carlsson/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Gunnar+Carlsson" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gunnar+Carlsson" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gunnar Carlsson/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
