--- a/pages/3251.html
+++ b/pages/3251.html
@@ -575,11 +575,16 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/KR+cohomology+theory">KR cohomology theory</a></p>
-</li>
-
-<li>
 <p><a class="existingWikiWord" href="/nlab/show/equivariant+connective+topological+K-theory">equivariant connective topological K-theory</a></p>
+</li>
+</ul>
+<table><thead><tr><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/complex+K-theory">complex K-theory</a></th><th>(<a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant</a>) <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">representing</a> <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/KU">KU</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+sphere+spectrum">S</a></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> <br /> of the <a class="existingWikiWord" href="/nlab/show/point">point</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo></mrow><annotation encoding="application/x-tex">\ast</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>KU</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">KU_G(\ast) \simeq R(G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Burnside+ring">Burnside ring</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mo>≃</mo><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\mathbb{S}_G(\ast) \simeq A(G)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">cohomology</a> <br /> of <a class="existingWikiWord" href="/nlab/show/classifying+space">classifying space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">B G</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕂𝕌</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕂𝕌</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">R(G) \simeq  \mathbb{KU}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{KU}_G(\ast)}  \simeq \mathbb{KU}(B G)</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Segal-Carlsson+completion+theorem">Segal-Carlsson completion theorem</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo>≃</mo><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mover><mo>⟶</mo><mtext>compl.</mtext></mover><mover><mrow><msub><mi>𝕊</mi> <mi>G</mi></msub><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo></mrow><mo>^</mo></mover><mo>≃</mo><mi>𝕊</mi><mo stretchy="false">(</mo><mi>B</mi><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A(G) \simeq  \mathbb{S}_G(\ast)  \overset{ \text{compl.} }{\longrightarrow} \widehat {\mathbb{S}_G(\ast)}  \simeq \mathbb{S}(B G) </annotation></semantics></math> <br /></td></tr>
+</tbody></table>
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/KR+cohomology+theory">KR cohomology theory</a></p>
 </li>
 
 <li>
@@ -593,7 +598,7 @@ margin-left: 0em;
 
 <h2 id="equivariant_cohomology">Equivariant cohomology</h2>
 
-<p>The notion of <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> relevant in equivariant stable homotopy theory is the flavor of <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> (see there for details) called <a class="existingWikiWord" href="/nlab/show/Bredon+cohomology">Bredon cohomology</a>.</p>
+<p>The notion of <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> relevant in equivariant stable homotopy theory is the flavor of <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> (see there for details) called <a class="existingWikiWord" href="/nlab/show/Bredon+cohomology">Bredon cohomology</a>. (See also at <em><a class="existingWikiWord" href="/nlab/show/orbifold+cohomology">orbifold cohomology</a></em>.)</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -724,14 +729,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 04:20:13.
+  Last revised on September 10, 2018 at 08:42:03.
   See the <a href="https://ncatlab.org/nlab/history/equivariant stable homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+stable+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+stable+homotopy+theory/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/equivariant+stable+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+stable+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+stable+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+stable+homotopy+theory/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/equivariant+stable+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+stable+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant stable homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
