--- a/pages/18702.html
+++ b/pages/18702.html
@@ -399,6 +399,12 @@ margin-left: 0em;
 <li id="Baraglia18"><a class="existingWikiWord" href="/nlab/show/David+Baraglia">David Baraglia</a>, <em>Topological recursion and Bergman tau functions for the Hitchin system</em>, talk at <em><a href="http://www.birs.ca/events/2018/5-day-workshops/18w5025">Tau Functions of Integrable Systems and Their Applications</a></em>, Banff 2018 (<a href="http://www.birs.ca/events/2018/5-day-workshops/18w5025/videos/watch/201809060845-Baraglia.html">recording</a>)</li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li id="Borot18"><a class="existingWikiWord" href="/nlab/show/Ga%C3%ABtan+Borot">Gaëtan Borot</a>, <em>Quantum Airy structures and topological recursion</em> talk at <em><a href="http://www.birs.ca/events/2018/5-day-workshops/18w5078">Geometry and Physics of Quantum Curves, Banff 2018</a></em> (<a href="http://www.birs.ca/events/2018/5-day-workshops/18w5078/videos/watch/201809100859-Borot.html">recording</a>)</li>
+</ul>
+
 <h3 id="relation_to_topological_string_and_mirror_symmetry">Relation to topological string and mirror symmetry</h3>
 
 <p>The relation to the <a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a> <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a>, <a class="existingWikiWord" href="/nlab/show/Gromov-Witten+invariants">Gromov-Witten invariants</a> and <a class="existingWikiWord" href="/nlab/show/mirror+symmetry">mirror symmetry</a> is due to</p>
@@ -436,14 +442,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  7, 2018 at 15:02:07.
+  Last revised on September 10, 2018 at 12:30:41.
   See the <a href="https://ncatlab.org/nlab/history/topological recursion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/topological+recursion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/topological+recursion/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/topological+recursion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/topological+recursion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/topological recursion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
