--- a/pages/94.html
+++ b/pages/94.html
@@ -1620,7 +1620,7 @@ margin-left: 0em;
 </li>
 
 <li id="Stasheff18">
-<p><a class="existingWikiWord" href="/nlab/show/Jim+Stasheff">Jim Stasheff</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>L</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">L_\infty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">A_\infty</annotation></semantics></math> strucutres: then and now</em> (<a href="https://arxiv.org/abs/1809.02526">arxiv</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Jim+Stasheff">Jim Stasheff</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>L</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">L_\infty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>∞</mn></msub></mrow><annotation encoding="application/x-tex">A_\infty</annotation></semantics></math> structures: then and now</em>, arXiv:<a href="https://arxiv.org/abs/1809.02526">1809.02526</a></p>
 </li>
 </ul>
 
@@ -1967,14 +1967,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 15:38:26.
+  Last revised on September 10, 2018 at 20:33:22.
   See the <a href="https://ncatlab.org/nlab/history/L-infinity-algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/L-infinity-algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/L-infinity-algebra/93" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(93 revisions)</span> | <a href="/nlab/show/diff/L-infinity-algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/L-infinity-algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/L-infinity-algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/L-infinity-algebra/94" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(94 revisions)</span> | <a href="/nlab/show/diff/L-infinity-algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/L-infinity-algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/L-infinity-algebra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
